# explainlens

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEMO.md  DEVELOPMENT_HANDOFF.md  FAQ.md  GALLERY.md  LOCAL_PROVIDERS.md  OPEN_SOURCE_RELEASE_CHECKLIST.md  PRODUCT_SPEC.md  PROVIDERS.md  QUICKSTART.md  RELEASE_AUDIT_REPORT.md  ROADMAP.md  SECURITY.md  WEB_UI.md
examples/: sample_ai_research_note.txt  sample_article.txt  sample_paper_excerpt.txt
scripts/: create_sample_pdf.py  prepare_release.py  release_audit.py
tests/: test_analyzer.py  test_chunker.py  test_citation_rendering.py  test_cli.py  test_demo_assets.py  test_disabled_openai_provider.py  test_doctor_cli.py  test_gallery_docs.py  test_image_adapters.py  test_image_cli.py  test_image_manifest.py  test_image_rendering.py  test_image_styles.py  test_local_fixture_provider.py  test_local_http_cli.py  test_local_http_provider.py  test_local_http_transport.py  test_local_provider_docs.py  test_mock_llm_provider.py  test_openai_cli.py  test_openai_image_adapter.py  test_openai_image_cli.py  test_openai_image_security.py  test_openai_image_transport.py  test_openai_provider.py  test_openai_security.py  test_openai_transport.py  test_page_aware_chunks.py  test_pdf_cli.py  test_pdf_parser.py  test_prompt_contract.py  test_provider_cli.py  test_provider_contract.py  test_provider_listing_cli.py  test_provider_manifest.py  test_provider_prompt_dump.py  test_providers.py  test_release_files.py  test_release_preparation.py  test_renderer.py  (+12 more)
(+52 files in other folders)
