[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "explainlens"
version = "0.3.0a0"
description = "Turn papers and complex texts into visual explainer cards and cartoon storyboards."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    {name = "ExplainLens Contributors"}
]
keywords = ["education", "visualization", "explainer", "cartoon", "storyboard", "paper-reader"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "jinja2>=3.1",
    "pydantic>=2.0",
    "pymupdf>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
explainlens = "explainlens.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
